# nonebot_plugin_ellyesidiom

./: README.md  pyproject.toml
nonebot_plugin_ellyesidiom/: __init__.py  cat_checker.py  config.py  consts.py  data_es.py  data_mongo.py  data_redis.py  data_source.py  eh_server.py  exceptions.py  ocr.py  storage.py  tools.py  utils.py
tests/: test_nonebot_plugin_ellyesidiom.py
